# primary-smart-contracts

./: .env.example  .gitignore  .prettierrc  .prettierrc.json  README.md  chain.config.js  deploy.json  hardhat.config.js  migration  migrationV2  migrationV3  migrationV4  migrationV5  migrationV6  package-lock.json  package.json  truffle-config.js
contracts/: IntermediaryTimeDelay.sol  PrimaryIndexToken.sol  PrimaryIndexTokenAtomicRepayment.sol  PrimaryIndexTokenLeverage.sol  PrimaryIndexTokenLiquidation.sol  PrimaryIndexTokenModerator.sol  PrimaryIndexTokenWrappedTokenGateway.sol  PrimaryLendingPlatformProxyAdmin.sol
contracts/priceOracle/priceproviders/backend/: Cargo.toml
contracts/priceOracle/priceproviders/backend/src/: main.rs
deploy/: deployMockToken.js  deployPLP.js  deployPriceOracle.js  deployPrimaryLendingPlatform.js  deploymentMockToken.js  deploymentPLP.js  deploymentProxyAdmin.js  deploymentToken.js  estimate.js
docs/: PrimaryIndexToken.md  PrimaryLendingPlatformProxyAdmin.md  README.md  SUMMARY.md  contract-addresses.md  index.md
migrations/: 2_deploy_bondtroller.js  2_deploy_compound.js  3_deploy_bUSDC.js  3_deploy_cUSDC.js  4_deploy_primaryIndexToken.js  5_deploy_bPrimaryIndexToken.js  5_deploy_cPrimaryIndexToken.js  5_deploy_priceOracle.js  6_update_primaryIndexToken.js  bPrimaryIndexTokenProxyAddress.json  bUsdcProxyAddress.json  cPrimaryIndexTokenProxyAddress.json  cUsdcProxyAddress.json  comptrollerProxyAddress.json  jumpRateModelAddress.json  primaryIndexTokenProxyAddress.json  proxyAdminAddress.json  simplePriceOracleProxyAddress.json  (+1 more)
(+1043 files in other folders)
