[package]
name = "backendPriceProvider"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
secp256k1 = "0.20.1"
web3 = { git = "https://github.com/SergeyBonded/rust-web3", branch = "0.15-fix" }
hex = "0.4"